# bookswap

./: .env  .gitignore  Cargo.toml  LICENSE  bookend.db  rustfmt.toml
docs/: authorization.md  opcodes.md
docs/resources/: book.md  books.md  users.md
migrations/: 1_init.sql  2_books.sql
src/: lib.rs  main.rs
src/models/: book.rs  database.rs  error.rs  mod.rs  requests.rs  session.rs  user.rs
src/routes/: auth.rs  books.rs  mod.rs  users.rs
src/utils/: authorization.rs  convectors.rs  middleware.rs  mod.rs  openlibrary.rs  snowflake.rs
static/: index.html
