[package]
name = "bookend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-cors = "0.7.0"
tokio = { version = "1.39.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio-native-tls",
	"sqlite",
    "chrono",
    "macros"
] }
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = { version = "0.15.7" }
log = "0.4.21"
env_logger = "0.11.5"
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.122"
thiserror = "2.0.17"
chrono = { version = "0.4.38", features = ["serde"] }
bitflags = "2.5.0"
sha256 = "1.5.0"
secrecy = { version = "0.8.0", features = ["alloc", "serde"] }
nanoid = "0.4.0"
rand = "0.9.2"
regex = "1.10.6"
