[package]
name = "bookend"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.5"
actix-web = "4.11.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
	"sqlite",
    "chrono",
    "macros"
] }
validator = { version = "0.20.0", features = ["derive"] }
dotenvy = { version = "0.15.7" }
log = "0.4.28"
env_logger = "0.11.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
chrono = { version = "0.4.42", features = ["serde"] }
regex = "1.12.2"
bitflags = "2.9.4"
sha256 = "1.6.0"
nanoid = "0.4.0"
rand = "0.9.2"
